k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: msc-de1-project
spec:
  type: ClusterIP

  selector:
    app: flask-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
