k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-network-policy
  namespace: msc-de1-project
spec:
  podSelector:
    matchLabels:
      app: flask-app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5000
